[GOAPI][SWAGGER] Improved Error models to be compliant with all failure outputs for all endpointd
